Dark/Light set finished

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -733,6 +733,10 @@ video {
   height: 2.5rem;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .h-full {
   height: 100%;
 }
@@ -1524,12 +1528,12 @@ video {
     top: 11%;
   }
 
-  .lg\:order-2 {
-    order: 2;
-  }
-
   .lg\:order-1 {
     order: 1;
+  }
+
+  .lg\:order-2 {
+    order: 2;
   }
 
   .lg\:m-0 {
@@ -1559,28 +1563,12 @@ video {
     display: flex;
   }
 
-  .lg\:h-full {
-    height: 100%;
-  }
-
-  .lg\:h-5 {
-    height: 1.25rem;
+  .lg\:h-32 {
+    height: 8rem;
   }
 
   .lg\:h-56 {
     height: 14rem;
-  }
-
-  .lg\:h-20 {
-    height: 5rem;
-  }
-
-  .lg\:h-3 {
-    height: 0.75rem;
-  }
-
-  .lg\:h-32 {
-    height: 8rem;
   }
 
   .lg\:w-36 {
@@ -1603,12 +1591,24 @@ video {
     flex: 1 1 0%;
   }
 
+  .lg\:flex-\[1\.5\] {
+    flex: 1.5;
+  }
+
   .lg\:basis-4\/12 {
     flex-basis: 33.333333%;
   }
 
   .lg\:basis-8\/12 {
     flex-basis: 66.666667%;
+  }
+
+  .lg\:basis-1 {
+    flex-basis: 0.25rem;
+  }
+
+  .lg\:basis-1\.5 {
+    flex-basis: 0.375rem;
   }
 
   .lg\:translate-x-0 {
@@ -1649,8 +1649,16 @@ video {
     gap: 2.5rem;
   }
 
+  .lg\:gap-15 {
+    gap: 60px;
+  }
+
   .lg\:gap-2\.5 {
     gap: 0.625rem;
+  }
+
+  .lg\:gap-20 {
+    gap: 5rem;
   }
 
   .lg\:gap-25 {
@@ -1665,20 +1673,8 @@ video {
     gap: 150px;
   }
 
-  .lg\:gap-20 {
-    gap: 5rem;
-  }
-
-  .lg\:gap-15 {
-    gap: 60px;
-  }
-
   .lg\:rounded-full {
     border-radius: 9999px;
-  }
-
-  .lg\:border {
-    border-width: 1px;
   }
 
   .lg\:border-b-0 {
@@ -1689,12 +1685,12 @@ video {
     border-left-width: 1px;
   }
 
-  .lg\:p-3 {
-    padding: 0.75rem;
-  }
-
   .lg\:p-10 {
     padding: 2.5rem;
+  }
+
+  .lg\:p-3 {
+    padding: 0.75rem;
   }
 
   .lg\:p-6 {
@@ -1736,6 +1732,11 @@ video {
     text-align: left;
   }
 
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .lg\:text-\[\.8rem\] {
     font-size: .8rem;
   }
@@ -1757,16 +1758,6 @@ video {
   .lg\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
-  }
-
-  .lg\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .lg\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
   }
 
   .lg\:hover\:bg-green60:hover {
