--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -582,12 +582,28 @@ video {
   top: -26px;
 }
 
+.bottom-full {
+  bottom: 100%;
+}
+
 .left-0 {
   left: 0px;
 }
 
 .left-1\/2 {
   left: 50%;
+}
+
+.left-\[50vw\] {
+  left: 50vw;
+}
+
+.left-\[85\%\] {
+  left: 85%;
+}
+
+.left-px {
+  left: 1px;
 }
 
 .right-0 {
@@ -598,8 +614,16 @@ video {
   right: -2%;
 }
 
+.right-px {
+  right: 1px;
+}
+
 .top-0 {
   top: 0px;
+}
+
+.top-1\/2 {
+  top: 50%;
 }
 
 .top-\[105\%\] {
@@ -610,12 +634,28 @@ video {
   top: 48%;
 }
 
+.top-\[50vh\] {
+  top: 50vh;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.-z-15 {
+  z-index: -15;
+}
+
 .-z-20 {
   z-index: -20;
 }
 
 .-z-30 {
   z-index: -30;
+}
+
+.-z-5 {
+  z-index: -5;
 }
 
 .z-0 {
@@ -655,6 +695,11 @@ video {
   margin-right: 3rem;
 }
 
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -673,12 +718,12 @@ video {
   margin-bottom: 8rem;
 }
 
-.mb-40 {
-  margin-bottom: 10rem;
-}
-
 .mt-10 {
   margin-top: 2.5rem;
+}
+
+.mt-36 {
+  margin-top: 9rem;
 }
 
 .mt-40 {
@@ -699,6 +744,10 @@ video {
 
 .grid {
   display: grid;
+}
+
+.contents {
+  display: contents;
 }
 
 .hidden {
@@ -737,6 +786,10 @@ video {
   height: 1rem;
 }
 
+.h-5\/6 {
+  height: 83.333333%;
+}
+
 .h-full {
   height: 100%;
 }
@@ -749,6 +802,10 @@ video {
   width: 3.5rem;
 }
 
+.w-24 {
+  width: 6rem;
+}
+
 .w-4 {
   width: 1rem;
 }
@@ -757,12 +814,29 @@ video {
   width: 1.25rem;
 }
 
+.w-\[40\.7vw\] {
+  width: 40.7vw;
+}
+
 .w-\[inherit\] {
   width: inherit;
 }
 
+.w-auto {
+  width: auto;
+}
+
 .w-full {
   width: 100%;
+}
+
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.min-w-64 {
+  min-width: 16rem;
 }
 
 .grow {
@@ -784,6 +858,10 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.cursor-default {
+  cursor: default;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -800,6 +878,10 @@ video {
   flex-direction: column;
 }
 
+.flex-nowrap {
+  flex-wrap: nowrap;
+}
+
 .items-start {
   align-items: flex-start;
 }
@@ -810,6 +892,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.items-stretch {
+  align-items: stretch;
 }
 
 .justify-start {
@@ -842,6 +928,10 @@ video {
 
 .gap-12 {
   gap: 3rem;
+}
+
+.gap-12\.5 {
+  gap: 50px;
 }
 
 .gap-15 {
@@ -913,6 +1003,14 @@ video {
   overflow: hidden;
 }
 
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
 .rounded-3xl {
   border-radius: 1.5rem;
 }
@@ -931,6 +1029,10 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded-tr-2xl {
+  border-top-right-radius: 1rem;
 }
 
 .border {
@@ -959,6 +1061,11 @@ video {
   border-color: rgb(38 38 38 / var(--tw-border-opacity));
 }
 
+.border-grey20 {
+  --tw-border-opacity: 1;
+  border-color: rgb(51 51 51 / var(--tw-border-opacity));
+}
+
 .border-grey30 {
   --tw-border-opacity: 1;
   border-color: rgb(76 76 77 / var(--tw-border-opacity));
@@ -976,6 +1083,11 @@ video {
 .bg-\[\#1A1A1A\] {
   --tw-bg-opacity: 1;
   background-color: rgb(26 26 26 / var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-green10 {
@@ -1013,6 +1125,10 @@ video {
   background-color: rgb(51 51 51 / var(--tw-bg-opacity));
 }
 
+.bg-inherit {
+  background-color: inherit;
+}
+
 .bg-white97 {
   --tw-bg-opacity: 1;
   background-color: rgb(247 247 248 / var(--tw-bg-opacity));
@@ -1031,12 +1147,20 @@ video {
   background-image: linear-gradient(to bottom, rgba(202, 255, 51, 1) 0%, rgba(202, 255, 51, 0) 47%);
 }
 
+.bg-leftLightFade {
+  background-image: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+}
+
 .bg-linear-to-bottom-left {
   background-image: linear-gradient(to bottom left, rgba(26, 26, 26, 0) 0%, rgba(26, 26, 26, 1) 40%);
 }
 
 .bg-outterGradient {
   background-image: linear-gradient(to bottom, rgba(202, 255, 51, 1) 0%, rgba(202, 255, 51, 0) 100%);
+}
+
+.bg-rightLightFade {
+  background-image: linear-gradient(to left, rgba(255, 255, 255, 1) 10%, rgba(255, 255, 255, 0) 100%);
 }
 
 .fill-current {
@@ -1063,8 +1187,21 @@ video {
   padding: 0.875rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-7\.5 {
+  padding: 30px;
+}
+
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .px-2\.5 {
@@ -1137,6 +1274,10 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.pb-2\.5 {
+  padding-bottom: 0.625rem;
+}
+
 .pb-7\.5 {
   padding-bottom: 30px;
 }
@@ -1181,6 +1322,11 @@ video {
   font-family: Lexend;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-\[\.51rem\] {
   font-size: .51rem;
 }
@@ -1211,6 +1357,16 @@ video {
 
 .text-\[28px\] {
   font-size: 28px;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm {
@@ -1287,6 +1443,16 @@ video {
   color: rgb(179 179 179 / var(--tw-text-opacity));
 }
 
+.text-grey75 {
+  --tw-text-opacity: 1;
+  color: rgb(191 191 191 / var(--tw-text-opacity));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1297,8 +1463,16 @@ video {
   color: rgb(228 228 231 / var(--tw-text-opacity));
 }
 
+.underline {
+  text-decoration-line: underline;
+}
+
 .opacity-10 {
   opacity: 0.1;
+}
+
+.opacity-100 {
+  opacity: 1;
 }
 
 .opacity-20 {
@@ -1315,6 +1489,15 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
 }
 
 /* fonts */
@@ -1375,9 +1558,44 @@ video {
   background-color: rgb(51 51 51 / var(--tw-bg-opacity));
 }
 
+.hover\:border-green60:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(202 255 51 / var(--tw-border-opacity));
+}
+
+.hover\:bg-green60:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(202 255 51 / var(--tw-bg-opacity));
+}
+
+.hover\:text-green60:hover {
+  --tw-text-opacity: 1;
+  color: rgb(202 255 51 / var(--tw-text-opacity));
+}
+
+.hover\:text-grey15:hover {
+  --tw-text-opacity: 1;
+  color: rgb(38 38 38 / var(--tw-text-opacity));
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 .peer:checked ~ .peer-checked\:bg-green60 {
   --tw-bg-opacity: 1;
   background-color: rgb(202 255 51 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:bg-grey10 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(25 25 25 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:text-green60 {
+  --tw-text-opacity: 1;
+  color: rgb(202 255 51 / var(--tw-text-opacity));
 }
 
 .peer:checked ~ .peer-checked\:text-grey11 {
@@ -1403,6 +1621,19 @@ video {
 .dark\:bg-grey11:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(28 28 28 / var(--tw-bg-opacity));
+}
+
+.dark\:bg-leftDarkFade:is(.dark *) {
+  background-image: linear-gradient(to left, rgba(25, 25, 25, 0) 0%, rgba(25, 25, 25, 1) 100%);
+}
+
+.dark\:bg-rightDarkFade:is(.dark *) {
+  background-image: linear-gradient(to left, rgba(25, 25, 25, 1) 10%, rgba(25, 25, 25, 0) 100%);
+}
+
+.dark\:text-green60:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(202 255 51 / var(--tw-text-opacity));
 }
 
 .dark\:text-grey70:is(.dark *) {
@@ -1550,9 +1781,18 @@ video {
     margin-right: 5rem;
   }
 
+  .lg\:mx-44 {
+    margin-left: 11rem;
+    margin-right: 11rem;
+  }
+
   .lg\:my-7\.5 {
     margin-top: 30px;
     margin-bottom: 30px;
+  }
+
+  .lg\:mt-7\.5 {
+    margin-top: 30px;
   }
 
   .lg\:block {
@@ -1561,6 +1801,10 @@ video {
 
   .lg\:flex {
     display: flex;
+  }
+
+  .lg\:grid {
+    display: grid;
   }
 
   .lg\:h-32 {
@@ -1575,16 +1819,16 @@ video {
     width: 9rem;
   }
 
+  .lg\:w-\[17\.8vw\] {
+    width: 17.8vw;
+  }
+
   .lg\:w-auto {
     width: auto;
   }
 
-  .lg\:min-w-\[35\.8\%\] {
-    min-width: 35.8%;
-  }
-
-  .lg\:min-w-\[56\%\] {
-    min-width: 56%;
+  .lg\:w-full {
+    width: 100%;
   }
 
   .lg\:flex-1 {
@@ -1603,14 +1847,6 @@ video {
     flex-basis: 66.666667%;
   }
 
-  .lg\:basis-1 {
-    flex-basis: 0.25rem;
-  }
-
-  .lg\:basis-1\.5 {
-    flex-basis: 0.375rem;
-  }
-
   .lg\:translate-x-0 {
     --tw-translate-x: 0px;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1621,8 +1857,16 @@ video {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:flex-col {
+    flex-direction: column;
   }
 
   .lg\:items-start {
@@ -1673,6 +1917,10 @@ video {
     gap: 150px;
   }
 
+  .lg\:overflow-x-visible {
+    overflow-x: visible;
+  }
+
   .lg\:rounded-full {
     border-radius: 9999px;
   }
@@ -1702,9 +1950,24 @@ video {
     padding-right: 5rem;
   }
 
+  .lg\:px-32 {
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+
+  .lg\:px-50 {
+    padding-left: 200px;
+    padding-right: 200px;
+  }
+
   .lg\:py-15 {
     padding-top: 60px;
     padding-bottom: 60px;
+  }
+
+  .lg\:py-20 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
   }
 
   .lg\:py-3 {
@@ -1722,6 +1985,10 @@ video {
 
   .lg\:pr-6 {
     padding-right: 1.5rem;
+  }
+
+  .lg\:pr-\[250px\] {
+    padding-right: 250px;
   }
 
   .lg\:pt-15 {
